<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ContentDescription">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/category_list_view"
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:id="@+id/appsLL"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/list_apps_image_view"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_default_category_image" />

                <Space
                    android:layout_width="17dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/list_apps_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/apps"
                    android:textIsSelectable="false"
                    android:textSize="26sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/batteryLL"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/list_battery_image_view"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_default_category_image" />

                <Space
                    android:layout_width="17dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/list_battery_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/battery"
                    android:textIsSelectable="false"
                    android:textSize="26sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bluetoothLL"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/list_bluetooth_image_view"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_default_category_image" />

                <Space
                    android:layout_width="17dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/list_bluetooth_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/bluetooth"
                    android:textIsSelectable="false"
                    android:textSize="26sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/telecomLL"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/list_telecom_image_view"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_default_category_image" />

                <Space
                    android:layout_width="17dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/list_telecom_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/cellular"
                    android:textIsSelectable="false"
                    android:textSize="26sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cpuLL"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/list_cpu_image_view"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_default_category_image" />

                <Space
                    android:layout_width="17dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/list_cpu_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/cpu"
                    android:textIsSelectable="false"
                    android:textSize="26sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/deviceLL"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/list_device_image_view"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_default_category_image" />

                <Space
                    android:layout_width="17dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/list_device_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/device"
                    android:textIsSelectable="false"
                    android:textSize="26sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ramLL"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/list_ram_image_view"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_default_category_image" />

                <Space
                    android:layout_width="17dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/list_ram_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/ram"
                    android:textIsSelectable="false"
                    android:textSize="26sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/storageLL"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/list_storage_image_view"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_default_category_image" />

                <Space
                    android:layout_width="17dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/list_storage_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/storage"
                    android:textIsSelectable="false"
                    android:textSize="26sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wifiLL"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/list_wifi_image_view"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_default_category_image" />

                <Space
                    android:layout_width="17dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/list_wifi_text_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/wifi"
                    android:textIsSelectable="false"
                    android:textSize="26sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>